--- a/Drowsiness_detection_with_emotion_DL_Project_.ipynb
+++ b/Drowsiness_detection_with_emotion_DL_Project_.ipynb
@@ -67,7 +67,7 @@
     "    ]),\n",
     "}\n",
     "\n",
-    "data_dir = 'D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\dataset_new'\n",
+    "data_dir = 'Data path'\n",
     "image_datasets = {x: datasets.ImageFolder(os.path.join(data_dir, x),\n",
     "                                          data_transforms[x])\n",
     "                  for x in ['train', 'test']}\n",
@@ -780,22 +780,15 @@
     }
    ],
    "source": [
-    "visualize_model_predictions(model_conv,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\opened.jpeg')\n",
-    "visualize_model_predictions(model_conv,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\opened1.jpeg')\n",
-    "visualize_model_predictions(model_conv,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\yawn.jpeg')\n",
-    "visualize_model_predictions(model_conv,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\yawn1.jpeg')\n",
-    "visualize_model_predictions(model_conv,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\closed.jpeg')\n",
-    "visualize_model_predictions(model_conv,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\closed1.jpeg')\n",
-    "visualize_model_predictions(model_conv,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\no yawn.jpeg')\n",
-    "visualize_model_predictions(model_conv,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\happy1.jpg')\n",
-    "visualize_model_predictions(model_conv,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\happy2.jpg')\n",
-    "visualize_model_predictions(model_ft,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\panic.jpg')\n",
-    "visualize_model_predictions(model_ft,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\panic.jpeg')\n",
-    "visualize_model_predictions(model_ft,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\panic1.jpeg')\n",
-    "visualize_model_predictions(model_ft,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\fear.jpeg')\n",
-    "visualize_model_predictions(model_ft,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\f1.jpeg')\n",
-    "visualize_model_predictions(model_ft,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\f2.jpeg')\n",
-    "visualize_model_predictions(model_ft,img_path='D:\\\\jagadish VIT\\\\3rd YEAR\\\\SEM 6\\\\Deep Learning\\\\DL PROJECT\\\\test images\\\\f3.jpeg')\n",
+    "visualize_model_predictions(model_conv,img_path='Image Path')\n",
+    "visualize_model_predictions(model_conv,img_path='Image Path')\n",
+    "visualize_model_predictions(model_conv,img_path='Image Path')\n",
+    "visualize_model_predictions(model_conv,img_path='Image Path')\n",
+    "visualize_model_predictions(model_conv,img_path='Image Path')\n",
+    "visualize_model_predictions(model_conv,img_path='Image Path')\n",
+    "visualize_model_predictions(model_conv,img_path='Image Path')\n",
+    "visualize_model_predictions(model_conv,img_path='Image Path')\n",
+    "visualize_model_predictions(model_conv,img_path='Image Path')\n",
     "plt.ioff()\n",
     "plt.show()"
    ]
